# mu-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
mu-menubar/: Package.swift  README.md
mu-menubar/Sources/MuMenuBar/: Info.plist  MenuBarView.swift  main.swift
src/: client.rs  daemon.rs  db.rs  downloader.rs  error.rs  main.rs  music.rs  notifications.rs  podcast.rs
src/commands/: add.rs  favorites.rs  library.rs  mod.rs  playback.rs  playlist.rs  plays.rs  podcast_commands.rs
